InsuranceOrg/force-app/main/default/objects/vlocity_ins__PolicyClaimRelationship__c/vlocity_ins__PolicyClaimRelationship__c.object-meta.xml
<CustomObject>
    <description>DEPRECATED. Master-detail child object of Policy (deprecated) and Claim.</description>
    <label>Policy Claim Relationship</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Policy Claim Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>