InsuranceOrg/force-app/main/default/objects/vlocity_ins__PolicyClaimRelationship__c/fields/vlocity_ins__ClaimStatus__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ClaimStatus__c</fullName>
    <formula>TEXT(vlocity_ins__ClaimId__r.vlocity_ins__ClaimStatus__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ClaimStatus</label>
    <type>Text</type>
</CustomField>